# snakecore

./: CMakeLists.txt
include/: snake-proto.h
lib/: snake-proto.c
